facebook has fixed its hard-coded left align like button

--- a/content/assets/stylesheets/app.scss
+++ b/content/assets/stylesheets/app.scss
@@ -197,7 +197,7 @@ article {
   }
   .fbbutton {
     padding: emCalc(5px);
-    text-align: left;
+    text-align: center;
   }
   hr {
     margin-top: emCalc(8px);
